--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "external-ip": "^1.3.1",
+    "is-port-reachable": "^3.0.0",
     "multer": "^1.4.2",
     "net": "^1.0.2"
   },
