theme color updated

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#52CCA8",
+  "theme_color": "#302D41",
   "background_color": "#ffffff"
 }
