--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,10 @@
 {
   "name": "scanner-net",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@styled-icons/boxicons-logos": "^10.18.0",
     "@styled-icons/boxicons-regular": "^10.18.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
